--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           </form>
         </div>
         <ul id="Todo-list"></ul>
+        <button id="reset-btn">Reset</button>
       </div>
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
